--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
 
+	//MyBatis
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.0'
+
+	//MySQLドライバー
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat-runtime'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
