--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=StudentManagement
+
+//DB?????
+spring.datasource.url=jdbc:mysql://localhost:3306/student_management
+spring.datasource.username=root
+spring.datasource.password=Mysqloko3e2587
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+//Mybatis???
+mybatis.configuration.map-underscore-to-camel-case=true
