--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@ java {
 	}
 }
 
+configurations {
+	compileOnly{
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
@@ -22,6 +28,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
+	// Lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 
 	//MyBatis
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.0'
