--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+	// Thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
